--- a/style.css
+++ b/style.css
@@ -1,8 +1,34 @@
 .group1{
     color:blueviolet !important;
-    font-size: 20px; 
+    font-size: 25px; 
 }
 
 img {
     border-radius: 50%;
   }
+
+.headerDivider {
+    padding-top: 2%;
+    padding-left: 1%;
+    padding-right: 1%;
+    border-left:1px solid #38546d; 
+    border-right:1px solid #16222c; 
+    height:80px;
+    position:absolute;
+    right:10px;
+    top:10px; 
+    background-color:rgba(245, 245, 220, 0.253);
+} 
+
+.Job_Title {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.Job_1 {
+    background-color:rgba(245, 245, 220, 0.39);
+}
+
+.Job_2 {
+    background-color:rgba(245, 245, 220, 0.822);
+}
